rework and pip distribution

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
 .DS_Store
-__pycache__/
+/venv*
+/.venv*
+*.py[cdo]
+*.swp
+*.swo
+*.egg-info/
+.idea
+.vscode
+.cache/
+build/
+dist/
+__pycache__
+.python-version
